--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,17 +23,17 @@ jobs:
         dotnet-version: ${{ matrix.dotnet-version }}
 
     - name: Restore dependencies
-      run: dotnet restore SA1201ier.sln
+      run: dotnet restore SA1201ier.slnx
 
     - name: Build
-      run: dotnet build SA1201ier.sln --no-restore --configuration Release
+      run: dotnet build SA1201ier.slnx --no-restore --configuration Release
 
     - name: Test
-      run: dotnet test SA1201ier.sln --no-build --configuration Release --verbosity normal
+      run: dotnet test SA1201ier.slnx --no-build --configuration Release --verbosity normal
 
     - name: Pack NuGet packages
       if: matrix.os == 'ubuntu-latest'
-      run: dotnet pack SA1201ier.sln --no-build --configuration Release --output ./artifacts
+      run: dotnet pack SA1201ier.slnx --no-build --configuration Release --output ./artifacts
 
     - name: Upload artifacts
       if: matrix.os == 'ubuntu-latest'
