--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,16 +25,43 @@ jobs:
         dotnet-version: '9.0.x'
 
     - name: Install GitVersion
-      uses: gittools/actions/gitversion/setup@v3.0.0
+      uses: gittools/actions/gitversion/setup@v3
       with:
         versionSpec: '6.x'
 
+    - name: Verify repository state
+      run: |
+        echo "Current directory:"
+        pwd
+        echo "Git status:"
+        git status
+        echo "Recent commits:"
+        git log --oneline -n 5
+        echo "GitVersion config:"
+        if [ -f GitVersion.yml ]; then
+          cat GitVersion.yml
+        else
+          echo "No GitVersion.yml found"
+        fi
+
     - name: Determine Version
       id: gitversion
-      uses: gittools/actions/gitversion/execute@v3.0.0
+      uses: gittools/actions/gitversion/execute@v3
       with:
         useConfigFile: true
         configFilePath: GitVersion.yml
+      continue-on-error: true
+
+    - name: Fallback to manual versioning if GitVersion fails
+      if: failure()
+      run: |
+        echo "semVer=0.1.0-alpha.${{ github.run_number }}" >> $GITHUB_OUTPUT
+        echo "nuGetVersionV2=0.1.0-alpha.${{ github.run_number }}" >> $GITHUB_OUTPUT
+        echo "assemblySemVer=0.1.0.0" >> $GITHUB_OUTPUT
+        echo "assemblySemFileVer=0.1.0.0" >> $GITHUB_OUTPUT
+        echo "informationalVersion=0.1.0-alpha.${{ github.run_number }}" >> $GITHUB_OUTPUT
+        echo "fullSemVer=0.1.0-alpha.${{ github.run_number }}" >> $GITHUB_OUTPUT
+      id: fallback_version
 
     - name: Display GitVersion outputs
       run: |
