--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0  # Required for GitVersion
+        ref: main       # Ensure we're on main branch, not detached HEAD
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
@@ -33,10 +34,14 @@ jobs:
       run: |
         echo "Current directory:"
         pwd
+        echo "Current branch:"
+        git branch --show-current
         echo "Git status:"
         git status
         echo "Recent commits:"
         git log --oneline -n 5
+        echo "All branches:"
+        git branch -a
         echo "GitVersion config:"
         if [ -f GitVersion.yml ]; then
           cat GitVersion.yml
