Switch to README.md for package documentation
Updated the `<PackageReadmeFile>` property in all project files (`SA1201ier.csproj`, `SA1201ier.Core.csproj`, and `SA1201ier.MSBuild.csproj`) to reference `README.md` instead of `README-NEW.md`.

Additionally, updated the `<None>` item group in `SA1201ier.Core.csproj` and `SA1201ier.MSBuild.csproj` to include `..\README.md` for packaging purposes. This ensures the correct readme file is included at the root of the package.

These changes standardize the use of `README.md` across the solution and remove references to the now-unused `README-NEW.md`.

--- a/SA1201ier.Cli/SA1201ier.csproj
+++ b/SA1201ier.Cli/SA1201ier.csproj
@@ -18,7 +18,7 @@
     <RepositoryUrl>https://github.com/ChristopherRWilson/SA1201ier</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageReadmeFile>README-NEW.md</PackageReadmeFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CSharpier.MsBuild" Version="1.1.2">
