--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -4,30 +4,20 @@ branches:
   main:
     regex: ^main$
     mode: ContinuousDeployment
-    tag: ''
+    label: ''
     increment: Patch
-    prevent-increment-of-merged-branch-version: true
-    track-merge-target: false
-    tracks-release-branches: false
     is-release-branch: true
   feature:
     regex: ^features?[/-]
     mode: ContinuousDeployment
-    tag: alpha
+    label: alpha
     increment: Inherit
-    prevent-increment-of-merged-branch-version: false
-    track-merge-target: false
-    tracks-release-branches: false
     is-release-branch: false
   pull-request:
     regex: ^(pull|pull\-requests|pr)[/-]
     mode: ContinuousDeployment
-    tag: PullRequest
+    label: PullRequest
     increment: Inherit
-    prevent-increment-of-merged-branch-version: false
-    track-merge-target: false
-    tracks-release-branches: false
     is-release-branch: false
 ignore:
   sha: []
-merge-message-formats: {}
