--- a/SA1201ier.MSBuild/SA1201ier.MSBuild.csproj
+++ b/SA1201ier.MSBuild/SA1201ier.MSBuild.csproj
@@ -16,13 +16,12 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <DevelopmentDependency>true</DevelopmentDependency>
     <IncludeBuildOutput>false</IncludeBuildOutput>
-    <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
   </PropertyGroup>
   <ItemGroup>
     <None Include="..\README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SA1201ier.Core\SA1201ier.Core.csproj" PrivateAssets="all" />
+    <ProjectReference Include="..\SA1201ier.Core\SA1201ier.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CSharpier.MsBuild" Version="1.1.2">
