Enhance SA1201ier with customizable ordering options
- Added new `.sa1201ierrc` options:
  - `staticMembersFirst` and `constMembersFirst` for controlling static/const member placement.
  - `accessLevelOrder`, `memberTypeOrder`, and `topLevelTypeOrder` for custom ordering.
- Replaced `LICENSE` with `LICENSE.md` (Markdown format).
- Expanded README with detailed examples, hierarchical config, and best practices.
- Updated `--init-config` to generate a comprehensive `.sa1201ierrc`.
- Enhanced `FormatterOptions` and `SA1201Formatter` to support new options.
- Added `CustomOrderingTests` to validate new configurations.
- Updated `FormatterOptionsTests` to ensure proper merging behavior.
- Added `LICENSE.md` to solution items in `SA1201ier.slnx`.
- Documented potential future enhancements in the README.

--- a/.sa1201ierrc.example
+++ b/.sa1201ierrc.example
@@ -14,5 +14,54 @@
 
   // Sort top-level types (classes, records, interfaces) by access level
   // Default: false
-  "sortTopLevelTypes": false
+  "sortTopLevelTypes": false,
+
+  // Whether static members should come before instance members
+  // Default: true
+  "staticMembersFirst": true,
+
+  // Whether const members should come before non-const members
+  // Default: true
+  "constMembersFirst": true,
+
+  // Custom order for access levels
+  // Valid values: "Public", "Internal", "ProtectedInternal", "Protected", "PrivateProtected", "Private"
+  // Default order (if not specified):
+  "accessLevelOrder": [
+    "Public",
+    "Internal",
+    "ProtectedInternal",
+    "Protected",
+    "PrivateProtected",
+    "Private"
+  ],
+
+  // Custom order for member types within a class
+  // Valid values: "Field", "Constructor", "Destructor", "Delegate", "Event", 
+  //               "Enum", "Interface", "Property", "Indexer", "Method", "Struct", "Class"
+  // Default order (if not specified):
+  "memberTypeOrder": [
+    "Field",
+    "Constructor",
+    "Destructor",
+    "Delegate",
+    "Event",
+    "Enum",
+    "Interface",
+    "Property",
+    "Indexer",
+    "Method",
+    "Struct",
+    "Class"
+  ],
+
+  // Custom order for top-level types (when sortTopLevelTypes is true)
+  // Valid values: "Enum", "Interface", "Struct", "Class"
+  // Default order (if not specified):
+  "topLevelTypeOrder": [
+    "Enum",
+    "Interface",
+    "Struct",
+    "Class"
+  ]
 }
