--- a/SA1201ier.Core/SA1201ier.Core.csproj
+++ b/SA1201ier.Core/SA1201ier.Core.csproj
@@ -25,4 +25,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Enums\" />
+  </ItemGroup>
 </Project>
