Add `insertBlankLineBetweenMembers` option for spacing
Introduce a new configuration option, `insertBlankLineBetweenMembers`, to enforce consistent spacing between members in code files.

- Updated `.sa1201ierrc.example` to include the option with a default value of `false`.
- Documented the option in `CONFIGURATION.md` with examples and use cases.
- Added the `InsertBlankLineBetweenMembers` property to `FormatterOptions` and updated its default configuration.
- Enhanced `Sa1201IerFormatter` to normalize blank lines between members when the option is enabled.
- Introduced the `EnsureSingleBlankLineBefore` helper method to handle spacing while preserving comments and attributes.

This feature improves code readability and ensures consistent formatting.

--- a/.sa1201ierrc.example
+++ b/.sa1201ierrc.example
@@ -24,6 +24,11 @@
   // Default: true
   "constMembersFirst": true,
 
+  // Insert a single blank line between sorted members
+  // When enabled, ensures exactly one blank line exists between members
+  // Default: false
+  "insertBlankLineBetweenMembers": false,
+
   // Custom order for access levels
   // Valid values: "Public", "Internal", "ProtectedInternal", "Protected", "PrivateProtected", "Private"
   // Default order (if not specified):
