--- a/SA1201ier.Core/SA1201ier.Core.csproj
+++ b/SA1201ier.Core/SA1201ier.Core.csproj
@@ -23,7 +23,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="[4.8.0,5.0.0)" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Enums\" />
