--- a/SA1201ier.MSBuild/SA1201ier.MSBuild.csproj
+++ b/SA1201ier.MSBuild/SA1201ier.MSBuild.csproj
@@ -30,7 +30,7 @@
     </PackageReference>
     <PackageReference
       Include="Microsoft.Build.Utilities.Core"
-      Version="17.14.8"
+      Version="[17.4.0,18.0.0)"
       PrivateAssets="all"
     />
   </ItemGroup>
