Enable packaging improvements and default formatting
- Added `<CopyLocalLockFileAssemblies>` to copy dependencies
  to the output directory for packaging in `SA1201ier.MSBuild.csproj`.
- Updated `<None Include>` to include all DLLs except
  `Microsoft.Build.*.dll` and replaced explicit DLL inclusion
  with a wildcard pattern.
- Enabled SA1201 formatting by default by setting
  `SA1201FormatOnBuild` to `true` in `SA1201ier.MSBuild.props`.
- Corrected task name casing from `FormatSA1201Task` to
  `FormatSa1201Task` in `SA1201ier.MSBuild.targets`.

--- a/SA1201ier.MSBuild/SA1201ier.MSBuild.csproj
+++ b/SA1201ier.MSBuild/SA1201ier.MSBuild.csproj
@@ -16,6 +16,8 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <DevelopmentDependency>true</DevelopmentDependency>
     <IncludeBuildOutput>false</IncludeBuildOutput>
+    <!-- Copy all dependencies to output directory so they can be packaged -->
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
     <None Include="..\README.md" Pack="true" PackagePath="\" />
@@ -36,7 +38,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="build\**" Pack="true" PackagePath="build\" />
-    <None Include="$(OutputPath)\SA1201ier.MSBuild.dll" Pack="true" PackagePath="build\net9.0\" />
-    <None Include="$(OutputPath)\SA1201ier.Core.dll" Pack="true" PackagePath="build\net9.0\" />
+    <!-- Include all DLLs from output directory except MSBuild assemblies -->
+    <None Include="$(OutputPath)\*.dll" Pack="true" PackagePath="build\net9.0\" 
+          Exclude="$(OutputPath)\Microsoft.Build.*.dll" />
   </ItemGroup>
 </Project>
