Refactor MSBuild XML for improved readability
Reformatted the `<None>` element in the `SA1201ier.MSBuild.csproj`
file to use a multi-line structure. Each attribute (`Include`,
`Pack`, `PackagePath`, and `Exclude`) is now placed on its own
line. This change enhances readability and maintainability
without altering functionality.

--- a/SA1201ier.MSBuild/SA1201ier.MSBuild.csproj
+++ b/SA1201ier.MSBuild/SA1201ier.MSBuild.csproj
@@ -39,7 +39,11 @@
   <ItemGroup>
     <None Include="build\**" Pack="true" PackagePath="build\" />
     <!-- Include all DLLs from output directory except MSBuild assemblies -->
-    <None Include="$(OutputPath)\*.dll" Pack="true" PackagePath="build\net9.0\" 
-          Exclude="$(OutputPath)\Microsoft.Build.*.dll" />
+    <None
+      Include="$(OutputPath)\*.dll"
+      Pack="true"
+      PackagePath="build\net9.0\"
+      Exclude="$(OutputPath)\Microsoft.Build.*.dll"
+    />
   </ItemGroup>
 </Project>
