Add multi-targeting support and improve dev experience
Updated project files to support .NET 6.0, 8.0, and 9.0 for broader compatibility. Enabled latest C# features with `<LangVersion>latest</LangVersion>`. Added `PolySharp` to backport C# 11 features for .NET 6.0.

Enhanced `SA1201ier.MSBuild.csproj` to include runtime configuration files and introduced `PackTaskDependencies` for framework-specific packaging. Updated `SA1201ier.MSBuild.targets` to dynamically resolve MSBuild task paths based on the target framework.

Added `VS_BUILD_FIX.md` with instructions to resolve Visual Studio build issues after multi-targeting changes. Introduced cleanup scripts (`clean-vs-cache.cmd` and `clean-vs-cache.sh`) to automate clearing caches and restoring packages.

Improves compatibility, maintainability, and developer experience.

--- a/SA1201ier.Cli/SA1201ier.csproj
+++ b/SA1201ier.Cli/SA1201ier.csproj
@@ -4,7 +4,9 @@
   </ItemGroup>
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
+    <!-- Target .NET 6.0 and later for broader compatibility -->
+    <TargetFrameworks>net6.0;net8.0;net9.0</TargetFrameworks>
+    <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackAsTool>true</PackAsTool>
@@ -12,7 +14,7 @@
     <PackageId>SA1201ier</PackageId>
     <Title>SA1201ier Formatter CLI Tool</Title>
     <Authors>Chris Wilson</Authors>
-    <Description>Command-line tool for SA1201 Formatter - automatically format C# files according to StyleCop rule SA1201 (elements should be ordered by access level).</Description>
+    <Description>Command-line tool for SA1201 Formatter - automatically format C# files according to StyleCop rule SA1201 (elements should be ordered by access level). Supports .NET 6.0 and later.</Description>
     <PackageTags>stylecop;sa1201;formatter;cli;tool;csharp;code-formatter;dotnet-tool</PackageTags>
     <PackageProjectUrl>https://github.com/ChristopherRWilson/SA1201ier</PackageProjectUrl>
     <RepositoryUrl>https://github.com/ChristopherRWilson/SA1201ier</RepositoryUrl>
