--- a/SA1201ier.MSBuild/SA1201ier.MSBuild.csproj
+++ b/SA1201ier.MSBuild/SA1201ier.MSBuild.csproj
@@ -1,13 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <!-- Target .NET 6.0 and later for broader compatibility -->
+    <TargetFrameworks>net6.0;net8.0;net9.0</TargetFrameworks>
+    <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>true</IsPackable>
     <PackageId>SA1201ier.MSBuild</PackageId>
     <Title>SA1201ier MSBuild Integration</Title>
     <Authors>Chris Wilson</Authors>
-    <Description>MSBuild integration for SA1201ier - automatically format C# files according to StyleCop rule SA1201 during build.</Description>
+    <Description>MSBuild integration for SA1201ier - automatically format C# files according to StyleCop rule SA1201 during build. Supports .NET 6.0 and later.</Description>
     <PackageTags>stylecop;sa1201;formatter;msbuild;csharp;code-formatter;build</PackageTags>
     <PackageProjectUrl>https://github.com/ChristopherRWilson/SA1201ier</PackageProjectUrl>
     <RepositoryUrl>https://github.com/ChristopherRWilson/SA1201ier</RepositoryUrl>
@@ -18,6 +20,8 @@
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <!-- Copy all dependencies to output directory so they can be packaged -->
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <!-- Generate runtime config for the task -->
+    <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
   <ItemGroup>
     <None Include="..\README.md" Pack="true" PackagePath="\" />
@@ -38,12 +42,40 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="build\**" Pack="true" PackagePath="build\" />
-    <!-- Include all DLLs from output directory except MSBuild assemblies -->
-    <None
-      Include="$(OutputPath)\*.dll"
-      Pack="true"
-      PackagePath="build\net9.0\"
-      Exclude="$(OutputPath)\Microsoft.Build.*.dll"
-    />
   </ItemGroup>
+  <!-- Package files for each target framework after build -->
+  <Target Name="PackTaskDependencies" AfterTargets="Build" Condition="'$(TargetFramework)' != ''">
+    <ItemGroup>
+      <!-- Include all DLLs except MSBuild assemblies -->
+      <TfmSpecificPackageFile
+        Include="$(OutputPath)*.dll"
+        Exclude="$(OutputPath)Microsoft.Build.*.dll"
+      >
+        <PackagePath>build\$(TargetFramework)\</PackagePath>
+        <Pack>true</Pack>
+        <Visible>false</Visible>
+      </TfmSpecificPackageFile>
+      <!-- Include deps.json -->
+      <TfmSpecificPackageFile
+        Include="$(OutputPath)$(AssemblyName).deps.json"
+        Condition="Exists('$(OutputPath)$(AssemblyName).deps.json')"
+      >
+        <PackagePath>build\$(TargetFramework)\</PackagePath>
+        <Pack>true</Pack>
+        <Visible>false</Visible>
+      </TfmSpecificPackageFile>
+      <!-- Include runtimeconfig.json -->
+      <TfmSpecificPackageFile
+        Include="$(OutputPath)$(AssemblyName).runtimeconfig.json"
+        Condition="Exists('$(OutputPath)$(AssemblyName).runtimeconfig.json')"
+      >
+        <PackagePath>build\$(TargetFramework)\</PackagePath>
+        <Pack>true</Pack>
+        <Visible>false</Visible>
+      </TfmSpecificPackageFile>
+    </ItemGroup>
+    <ItemGroup>
+      <None Include="@(TfmSpecificPackageFile)" />
+    </ItemGroup>
+  </Target>
 </Project>
