--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        dotnet-version: ['9.0.x']
+        dotnet-version: ['6.0.x', '8.0.x', '9.0.x']
 
     steps:
     - uses: actions/checkout@v3
@@ -32,11 +32,11 @@ jobs:
       run: dotnet test SA1201ier.slnx --no-build --configuration Release --verbosity normal
 
     - name: Pack NuGet packages
-      if: matrix.os == 'ubuntu-latest'
+      if: matrix.os == 'ubuntu-latest' && matrix.dotnet-version == '9.0.x'
       run: dotnet pack SA1201ier.slnx --no-build --configuration Release --output ./artifacts
 
     - name: Upload artifacts
-      if: matrix.os == 'ubuntu-latest'
+      if: matrix.os == 'ubuntu-latest' && matrix.dotnet-version == '9.0.x'
       uses: actions/upload-artifact@v4
       with:
         name: nuget-packages
@@ -45,6 +45,16 @@ jobs:
   test-cli:
     runs-on: ubuntu-latest
     needs: build-and-test
+    strategy:
+      matrix:
+        framework: ['net6.0', 'net8.0', 'net9.0']
+        include:
+          - framework: 'net6.0'
+            dotnet-version: '6.0.x'
+          - framework: 'net8.0'
+            dotnet-version: '8.0.x'
+          - framework: 'net9.0'
+            dotnet-version: '9.0.x'
 
     steps:
     - uses: actions/checkout@v3
@@ -52,7 +62,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '9.0.x'
+        dotnet-version: ${{ matrix.dotnet-version }}
 
     - name: Build CLI
       run: dotnet build SA1201ier.Cli/SA1201ier.csproj --configuration Release
@@ -68,16 +78,16 @@ jobs:
         EOF
 
     - name: Run CLI check
-      run: dotnet run --project SA1201ier.Cli/SA1201ier.csproj --no-build --configuration Release -- TestFile.cs --check || true
+      run: dotnet run --project SA1201ier.Cli/SA1201ier.csproj --framework ${{ matrix.framework }} --no-build --configuration Release -- TestFile.cs --check || true
 
     - name: Run CLI format
-      run: dotnet run --project SA1201ier.Cli/SA1201ier.csproj --no-build --configuration Release -- TestFile.cs
+      run: dotnet run --project SA1201ier.Cli/SA1201ier.csproj --framework ${{ matrix.framework }} --no-build --configuration Release -- TestFile.cs
 
     - name: Verify formatting
       run: |
         if grep -q "public void PublicMethod" TestFile.cs; then
-          echo "File was formatted successfully"
+          echo "File was formatted successfully on ${{ matrix.framework }}"
         else
-          echo "File formatting failed"
+          echo "File formatting failed on ${{ matrix.framework }}"
           exit 1
         fi
