Remove Build dependency from PackTaskDependencies target
The `DependsOnTargets="Build"` attribute was removed from the
`PackTaskDependencies` target in the MSBuild project file. This
change decouples the `PackTaskDependencies` target from the
`Build` target, allowing it to execute independently. This
modification improves flexibility and supports scenarios where
the `Build` target is not required.

--- a/SA1201ier.MSBuild/SA1201ier.MSBuild.csproj
+++ b/SA1201ier.MSBuild/SA1201ier.MSBuild.csproj
@@ -48,7 +48,7 @@
     <TargetsForTfmSpecificContentInPackage>$(TargetsForTfmSpecificContentInPackage);PackTaskDependencies</TargetsForTfmSpecificContentInPackage>
   </PropertyGroup>
   <!-- Package files for each target framework - this runs once per TFM during inner builds -->
-  <Target Name="PackTaskDependencies" DependsOnTargets="Build">
+  <Target Name="PackTaskDependencies">
     <ItemGroup>
       <!-- Include all DLLs except MSBuild assemblies -->
       <TfmSpecificPackageFile
