Restrict PublishAndIncludeCliTools to pack operations
Updated the `PublishAndIncludeCliTools` target to run only during pack operations by modifying its `Condition` attribute. Clarified the associated comment to reflect this change. The logic for publishing CLI tools for `net6.0`, `net8.0`, and `net9.0` remains unchanged.

--- a/SA1201ier.MSBuild/SA1201ier.MSBuild.csproj
+++ b/SA1201ier.MSBuild/SA1201ier.MSBuild.csproj
@@ -37,8 +37,8 @@
   </PropertyGroup>
   
   <!-- Automatically publish CLI tools and include them in the package -->
-  <!-- Only run during Pack, not during design-time builds in Visual Studio -->
-  <Target Name="PublishAndIncludeCliTools" Condition="'$(IsPacking)' == 'true' OR '$(NoBuild)' != 'true'">
+  <!-- Only run during Pack operations, not during regular builds or design-time -->
+  <Target Name="PublishAndIncludeCliTools" Condition="'$(IsPacking)' == 'true'">
     <Message Text="Publishing CLI tools for net6.0, net8.0, net9.0..." Importance="high" />
     <Message Text="Configuration: $(Configuration)" Importance="high" />
     
